[gd_scene load_steps=4 format=3 uid="uid://bj2gm4li4gtc7"]

[ext_resource type="Script" path="res://Scenes/enemy_attack.gd" id="1_t5ujh"]
[ext_resource type="Texture2D" uid="uid://d1getlqddjwid" path="res://Assets/sprites/shot_water.png" id="2_qm5lf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_53t54"]
radius = 4.0

[node name="EnemyAttack" type="Area2D"]
collision_layer = 8
script = ExtResource("1_t5ujh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qm5lf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_53t54")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.45, 0.5)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
